<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceTalk</string>
    <string name="action_settings">Settings</string>
    <string name="groups">Groups near you</string>
    <string name="button_new_group">Create a Group</string>
    <string name="button_refresh_groups">Refresh Groups</string>
    <string name="text_welcome">PlaceTalk</string>
    <string name="text_welcome_instructions">Enter a username to begin</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="edit_group_name">New group name</string>
    <string name="title_activity_chat">Chat</string>
    <string name="edit_typeMsg">Type message</string>
    <string name="button_sendMsg">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_main">PlaceTalk</string>
    <string name="title_activity_group_list">Group List</string>
    <string name="edit_username">Username</string>
    <string name="button_username">Continue</string>

</resources>