<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
	<ImageView
	    android:contentDescription="PlaceTalk logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/placetalklogo" />
	
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textSize="50sp" />
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="(Beta)"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/text_instructions"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome_instructions"
        android:textSize="20sp" />

    <EditText android:id="@+id/edit_username"
        android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:gravity="center"
        android:hint="@string/edit_username" />
    
    <Button
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:text="@string/button_username"
		android:onClick="goToGroups" />
    
    <TextView
        android:id="@+id/text_regId"
        android:textIsSelectable="false"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
</LinearLayout>