<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bluebutton"
	        android:layout_weight="1"
	        android:text="@string/button_new_group"
	        android:textColor="#FFFFFF"
			android:onClick="createGroup" />
		<Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bluebutton"
	        android:layout_weight= "1"
	        android:text="@string/button_refresh_groups"
	        android:textColor="#FFFFFF"
			android:onClick="refreshGroups" />
	</LinearLayout>

	<TextView
	    android:id="@+id/text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/groups"
	    android:textSize="25sp"
	    android:background="#3454B4"
	    android:textColor="#FFFFFF" />
	
	<ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	
</LinearLayout> 